# informly-python

./: README.md  __init__.py  client.py  environment.py  pyproject.toml  reference.md
.github/workflows/: publish.yml
contacts/: __init__.py  client.py  raw_client.py
contacts/types/: __init__.py  list_contacts_response.py
core/: client_wrapper.py
health/: __init__.py  client.py  raw_client.py
health/types/: __init__.py  get_health_response.py  get_health_response_data.py
segments/: client.py
segments/types/: list_segments_response.py
src/informly/: __init__.py  client.py  environment.py
src/informly/.fern/: metadata.json
src/informly/contacts/: __init__.py  client.py  raw_client.py
src/informly/contacts/types/: __init__.py  create_contact_response.py  delete_contact_response.py  delete_contacts_response.py  delete_contacts_response_data.py  get_contact_response.py  update_contact_response.py
src/informly/core/: client_wrapper.py
src/informly/errors/: __init__.py
src/informly/segments/: __init__.py  client.py  raw_client.py
src/informly/segments/types/: __init__.py
src/informly/types/: __init__.py  contact.py  contact_contact.py  contact_segments_item.py  error_response.py  error_response_error.py  error_response_error_details_item.py  pagination_meta.py
tests/: test_aiohttp_autodetect.py
types/: __init__.py  contact.py  contact_contact.py  error_response_error.py  error_response_error_details_item.py  pagination_meta.py  segment.py
