[project]
name = "informly-sdk"
version = "0.1.0"
description = "Official Informly API client for Python"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "httpx >= 0.21.2",
    "pydantic >= 1.9.2",
    "pydantic-core >= 2.18.2",
    "typing_extensions >= 4.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
