[project]
name = "informly"
version = "0.1.0"
description = "Official Informly API client for Python"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx >= 0.21.2",
    "pydantic >= 2.0",
    "pydantic-core >= 2.18.2",
    "typing_extensions >= 4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
